--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,9 +1,9 @@
 
 [theme]
-primaryColor="#e98074"
+primaryColor="#f3a79f"
 backgroundColor="#2a1b3d"
 secondaryBackgroundColor="#44318d"
-textColor="#e29cbd"
+textColor="#e2b3c9"
 font = "sans-serif"
 
 
